--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Website Name. All rights reserved.</p>
+        <p>&copy; 2024 Fitness Gym. All rights reserved.</p>
     </footer>
 
 </body>
